--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check-env": "node -e 'console.log(process.env)' | grep npm"
   },
   "keywords": [],
   "author": "",
